--- a/src/app/board/column/task/task.component.html
+++ b/src/app/board/column/task/task.component.html
@@ -1,4 +1,4 @@
-<p class="task" draggable="true" (dragstart)="dragStart($event)" id="{{task.id}}">
-  {{task.description}}
-</p>
+<div class="task" draggable="true" (dragstart)="dragStart($event)" id="{{task.id}}">
+  <span class="projectName"></span><span class="taskName">{{task.description}}</span>
+</div>
 
