--- a/src/app/board/column/column.component.html
+++ b/src/app/board/column/column.component.html
@@ -1,8 +1,11 @@
-<div class="list" (dragover)="allowDrop($event)" (drop)="drop($event)">
-  <p class="list__title"><strong>{{column.name}}</strong></p>
-  <div class="tasks">
-    <app-task *ngFor="let taskId of column.tasks" [task]="taskStorage.getTask(taskId)"></app-task>
-  </div>
+<div class="board-column" (dragover)="allowDrop($event)" (drop)="drop($event)">
+    <div class="column-title">
+      {{ column.name }}
+    </div>
+
+    <div class="tasks-container">
+      <app-task *ngFor="let taskId of column.tasks" [task]="taskStorage.getTask(taskId)"></app-task>
+    </div>
 
   <input #addTaskInput type="text" (keyup.enter)="onEnter(addTaskInput.value); addTaskInput.value=''; displayAddTask=false;" *ngIf="displayAddTask" autofocus>
   <a href="#" class="list__newtask" (click)="toggleDisplayAddTask();">Add a task...</a>
