Added static data read and some styles.

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,10 +1,10 @@
-div {
-  background: #ffffff;
-  display: flex;
-  padding: 0 5px;
-  height: 100vh;
-  overflow-x: scroll;
-}
+//div {
+//  background: #ffffff;
+//  display: flex;
+//  padding: 0 5px;
+//  height: 100vh;
+//  overflow-x: scroll;
+//}
 
 .root {
   display: flex;
