--- a/src/app/board/column/task/task.component.html
+++ b/src/app/board/column/task/task.component.html
@@ -1,4 +1,7 @@
-<div class="task" draggable="true" (dragstart)="dragStart($event)" id="{{task.id}}">
-  <span class="projectName"></span><span class="taskName">{{task.description}}</span>
+<div *ngIf="project | async as projectAux">
+  <div class="task" draggable="true" (dragstart)="dragStart($event)" id="{{task._id}}" [style.backgroundColor]="projectAux.color">
+    <span class="projectName">{{projectAux.name}}</span><span class="taskName">{{task.name}}</span>
+  </div>
 </div>
+
 
