--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,10 +1,30 @@
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <a class="navbar-brand">
+    Kanban
+  </a>
+
+  <button class="navbar-toggler" type="button">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div ngbDropdown class="d-inline-block">
+    <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Select board</button>
+    <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+      <button ngbDropdownItem *ngFor="let board of (boards | async)" cdkDrag (click)="onClickBoard(board)">{{board.name}}</button>
+
+    </div>
+  </div>
+
+</nav>
 <div class="root">
+
   <div class="board">
 
     <div class="board-wrapper">
 
       <div class="board-columns">
-        <app-column class="board-column" *ngFor="let column of columns" [column]="column" [taskStorage]="taskStorage"></app-column>
+        <app-column class="board-column" *ngFor="let column of (columns | async)" [column]="column"></app-column>
 
       </div>
 
