First solution to move task. Next try with socket.broadcast.emmit().

--- a/src/app/board/column/column.component.html
+++ b/src/app/board/column/column.component.html
@@ -1,6 +1,6 @@
-<div class="board-column" (dragover)="allowDrop($event)" (drop)="drop($event)">
+<div class="board-column" (dragover)="allowDrop($event)" (drop)="drop($event)" id="{{column._id}}">
     <div class="column-title">
-      {{ column.name }}
+      {{ column.name }} | {{column._id}}
     </div>
 
     <div class="tasks-container">
