--- a/src/app/board/column/column.component.html
+++ b/src/app/board/column/column.component.html
@@ -1,10 +1,11 @@
-<div class="board-column" id="{{column._id}}" cdkDropList [cdkDropListData]="tasks" (cdkDropListDropped)="drop($event)">
+<div class="board-column" id="{{column._id}}" cdkDropList [cdkDropListData]="tasks | async" (cdkDropListDropped)="drop($event)">
     <div class="column-title">
       {{ column.name }} | {{column._id}}
     </div>
 
     <div class="tasks-container"><!-- cdkDropList -->
-      <app-task *ngFor="let task of tasks" [task]="task" (click)="openModalTaskDetail(task)" cdkDrag [cdkDragData]="task"></app-task><!-- cdkDrag -->
+      <app-task *ngFor="let task of (tasks | async)" [task]="task" (click)="openModalTaskDetail(task)" cdkDrag [cdkDragData]="task"></app-task><!-- cdkDrag -->
     </div>
+
 </div>
 <button class="btn" (click)="openModalTaskAdd()">Add a task...</button>
