--- a/src/app/board/column/task/task.component.html
+++ b/src/app/board/column/task/task.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="project | async as projectAux">
-  <div class="task" id="{{task._id}}" [style.backgroundColor]="projectAux.color">
-    <span class="projectName">{{task.name}}</span>
-    <span class="taskName">{{task.columnId}}</span>
+<div *ngIf="project | async as project">
+  <div class="task" id="{{task._id}}" [style.backgroundColor]="project.color">
+    <span class="projectName">{{project.name}}</span>
+    <span class="taskName">{{task.name}}</span>
   </div>
 </div>
 
