Edit and delete tasks.

--- a/src/app/board/column/task-detail/task-detail.component.html
+++ b/src/app/board/column/task-detail/task-detail.component.html
@@ -31,6 +31,10 @@
     <p>{{task.timeSpend}}</p>
   </div>
 
+  <div>
+    <button class="btn btn-danger" style="margin-left: 24px; margin-top: 75px" (click)="deleteTask()">Delete</button>
+  </div>
+
 </div>
 
 
