--- a/src/app/board/column/task/task.component.html
+++ b/src/app/board/column/task/task.component.html
@@ -2,6 +2,9 @@
   <div class="task" id="{{task._id}}" [style.backgroundColor]="project.color">
     <span class="projectName">{{project.name}}</span>
     <span class="taskName">{{task.name}}</span>
+
+    <span *ngIf="task.columnId == '5dff7030dc453c1866b44d19'" class="taskName" style="float: right">{{ task.timeStopwatch * 60000 | date:'HH:mm':'UTC'}}</span>
+
   </div>
 </div>
 
