--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -52,7 +52,7 @@
     overflow-x: auto;
 
     .board-columns {
-      display: flex;
+      //display: flex;
       flex-grow: 1;
 
       .board-column {
