--- a/src/app/board/doing-list/doing-list.component.html
+++ b/src/app/board/doing-list/doing-list.component.html
@@ -1,12 +1,10 @@
-<div class="tasks-container">
-  <div *ngFor="let task of tasks">
+<div class="board-column">
+  <div class="column-title">
+    Doing tasks timer
+  </div>
 
-    <div class="task" id="{{task._id}}">
-      <span class="taskName">{{task.name}}</span>
-
-      <span *ngIf="task.columnId == '5dff7030dc453c1866b44d19'" class="taskName" style="float: right">{{ task.timeStopwatch * 60000 | date:'HH:mm':'UTC'}}</span>
-    </div>
-
+  <div class="tasks-container">
+    <app-task *ngFor="let task of tasks" [task]="task" [showTimer]="true"></app-task>
   </div>
 
 </div>
